# data-engineering-zoomcamp

03-data-warehouse/: HOMEWORK.md
04-analytics-engineering/homework/: .gitignore  .user.yml  Dockerfile.ingestion  README.md  dbt_project.yml  docker-compose.yml  load_data.py  profiles.yml
04-analytics-engineering/homework/models/core/: fact_trips_fhv.sql  schema.yml
04-analytics-engineering/homework/models/staging/: schema.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
05-batch/: docker-compose.yml
05-batch/homework/: Homework.ipynb
05-batch/homework/fhv/: .part-00000-3d222835-33ab-40e1-b17c-97a608f48902-c000.snappy.parquet.crc  .part-00001-3d222835-33ab-40e1-b17c-97a608f48902-c000.snappy.parquet.crc  .part-00002-3d222835-33ab-40e1-b17c-97a608f48902-c000.snappy.parquet.crc  .part-00003-3d222835-33ab-40e1-b17c-97a608f48902-c000.snappy.parquet.crc  .part-00004-3d222835-33ab-40e1-b17c-97a608f48902-c000.snappy.parquet.crc  .part-00005-3d222835-33ab-40e1-b17c-97a608f48902-c000.snappy.parquet.crc
cohorts/2024/01-docker-terraform/: homework.md
cohorts/2024/05-batch/: homework.md
cohorts/2024/06-streaming/: docker-compose.yml  homework.md
cohorts/2024/06-streaming/kafka-producer/: Homework.ipynb  pyproject.toml
cohorts/2024/06-streaming/kafka-producer/kafka_producer/: send.py  send_taxi_data.py
